fix gap italic title span :lipstick:

--- a/styles/components/title.scss
+++ b/styles/components/title.scss
@@ -48,7 +48,6 @@
 }
 
 .italic {
-  margin-left: 1rem;
   font-style: italic;
   text-transform: lowercase;
 }
